<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_inventory"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/nav_inventory" />
    <item
        android:id="@+id/nav_inbound"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/nav_inbound" />
    <item
        android:id="@+id/nav_outbound"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/nav_outbound" />
    <item
        android:id="@+id/nav_pick"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_pick" />
</menu>
